2011-11-21  Jochen Eisinger  <jochen@chromium.org>

        Implement Meta referrer
        https://bugs.webkit.org/show_bug.cgi?id=72674

        Reviewed by Adam Barth.

        * WebKit.gyp:
        * public/WebFrame.h:
        * public/WebReferrerPolicy.h: Added.
        * public/WebSecurityPolicy.h:
        * src/AssertMatchingEnums.cpp:
        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::referrerPolicy):
        (WebKit::WebFrameImpl::setReferrerForRequest):
        * src/WebFrameImpl.h:
        * src/WebSecurityPolicy.cpp:
        (WebKit::WebSecurityPolicy::generateReferrerHeader):

2011-11-21  Dominic Mazzoni  <dmazzoni@google.com>

        Accessibility: Multiselect list boxes need to report the active option in addition to which items are selected.
        https://bugs.webkit.org/show_bug.cgi?id=72479

        Reviewed by Chris Fleizach.

        Test: accessibility/multiselect-list-reports-active-option.html

        * public/WebAccessibilityObject.h:
        * src/WebAccessibilityObject.cpp:
        (WebKit::WebAccessibilityObject::isSelectedOptionActive):

2011-11-20  Kenichi Ishibashi  <bashi@chromium.org>

        [Chromium] Remove old getFontFamilyForCharacters() and familyForChars() APIs.
        https://bugs.webkit.org/show_bug.cgi?id=72844

        Removes old APIs for getting font family for given characters.

        Reviewed by Darin Fisher.

        * public/linux/WebFontInfo.h: Removed old familyForChars().
        * public/linux/WebSandboxSupport.h: Removed old getFontFamilyForCharacters() and changed new getFontFamilyForCharacters() to be a pure virtual function.
        * src/linux/WebFontInfo.cpp: Removes old familyForChars().

2011-10-17  Antonio Gomes  <agomes@rim.com>

        Pass a Frame* parameter in EditorClient::respondToChangedSelection
        https://bugs.webkit.org/show_bug.cgi?id=70248

        Reviewed by Ryosuke Niwa.

        * src/EditorClientImpl.cpp: Make use of the newly added Frame* parameter.