@@ -1,3 +1,15 @@
+2011-11-21  Shinya Kawanaka  <shinyak@google.com>
+
+        Implement a setter for UnifiedTextCheckerEnabled.
+        https://bugs.webkit.org/show_bug.cgi?id=72872
+
+        Reviewed by Darin Fisher.
+
+        * public/WebSettings.h:
+        * src/WebSettingsImpl.cpp:
+        (WebKit::WebSettingsImpl::setUnifiedTextCheckerEnabled): Added.
+        * src/WebSettingsImpl.h:
+
 2011-11-21  Jochen Eisinger  <jochen@chromium.org>
 
         Implement Meta referrer
